...
            "state": "translated",
            "value": "มีร้านค้าใหม่ใน %@"
          }
        }
      }
    },
    "Next": {
      "comment": "The \"Next\" button text in the feature hint.",
      "isCommentAutoGenerated": true,
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
...
            "value": "Standort aktivieren"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Enable Location"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Activar ubicación"
...
            "value": "Loslegen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Get Started"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Empezar"
...
            "state": "translated",
            "value": "ค้นหาเมืองทั่วโลก"
          }
        }
      }
    },
    "Search city": {
      "comment": "A placeholder text for a text field in the onboarding view that allows users to search for a city.",
      "isCommentAutoGenerated": true,
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
...
            "state": "translated",
            "value": "ลองใช้ชื่อเมือง รัฐ หรือประเทศ"
          }
        }
      }
    },
    "Turn On Alerts": {
      "comment": "Primary onboarding button title for enabling merchant alerts",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Benachrichtigungen aktivieren"
...
