...
    }

    func selectLocation(_ result: SearchResult, completion: @escaping (SearchLocation) -> Void) {
        isSearching = true

        let searchRequest = MKLocalSearch.Request(completion: result.completion)
        let search = MKLocalSearch(request: searchRequest)

        search.start { [weak self] response, error in
            guard let self = self else { return }

            DispatchQueue.main.async {
                self.isSearching = false
...
